# picosdkal

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
ci/lib_host/: runCMake.sh  runMake.sh
ci/lib_mocks/: runCMake.sh  runMake.sh
ci/lib_stubs/: runCMake.sh  runMake.sh
ci/lib_target/: runCMake.sh  runMake.sh
ci/ut_asan_x86_64/: runCMake.sh  runCTest.sh  runMake.sh
ci/ut_lcov_x86_64/: runCMake.sh  runCodeCoverageGenerating.sh  runMake.sh
ci/ut_valgrind_x86_64/: runCMake.sh  runCTestWithValgrind.sh  runMake.sh
ci/ut_x86_64/: runCMake.sh  runCTest.sh  runMake.sh
cmake/: AddPicoSdkIncludeDirectories.cmake  CodeCoverage.cmake  CopyPicoSdk.cmake  CopyPicoSdkExtras.cmake  FetchAndInitializeGTest.cmake  FetchAndInitializePicoSdk.cmake  FetchAndInitializePicoSdkExtras.cmake  LinkPicoSdkLibraries.cmake  ParseOptions.cmake  SdkVersion.cmake  SetCompilerFlagsForTests.cmake
include/rpipicosdkal/: Example.hpp  IExample.hpp  fwd.hpp
include/rpipicosdkal/context/: Context.hpp  IContext.hpp
include/rpipicosdkal/core/: InternalSdkLogger.hpp  Logger.hpp  Types.hpp  fwd.hpp
include/rpipicosdkal/core/definitions/: EOperationResult.hpp  fwd.hpp
include/rpipicosdkal/core/detail/: LoggerFlusher.hpp  NullOutLoggerFlusher.hpp  StdOutLoggerFlusher.hpp
include/rpipicosdkal/gpio/: Context.hpp  GpioSettingsController.hpp  GpioStateController.hpp  IContext.hpp  IGpioSettingsController.hpp  IGpioStateController.hpp  fwd.hpp
include/rpipicosdkal/gpio/definitions/: EGpioDirection.hpp  EGpioDriveStrength.hpp  EGpioFunction.hpp  EGpioPullUp.hpp  EGpioSlewRate.hpp  EGpioSlewRateLimiting.hpp  EGpioState.hpp  fwd.hpp
include/rpipicosdkal/gpio/detail/: PrinterBase.hpp
include/rpipicosdkal/system/: IApplication.hpp  Runner.hpp  fwd.hpp
mock/: CMakeLists.txt
mock/rpipicosdkalmock/: CMakeLists.txt  IExampleMock.cpp  IExampleMock.hpp
mock/rpipicosdkalmock/core/: CMakeLists.txt
mock/rpipicosdkalmock/gpio/: CMakeLists.txt  IGpioSettingsControllerMock.cpp  IGpioSettingsControllerMock.hpp  IGpioStateControllerMock.cpp  IGpioStateControllerMock.hpp
picosdkhostinterface/: CMakeLists.txt
picosdkhostinterface/hardware_gpio/: CMakeLists.txt  gpio.cpp
picosdkhostinterface/hardware_gpio/hardware/: gpio.h
scripts/: buildAndRunUt.sh  buildAndRunUtWithAsan.sh  buildAndRunUtWithLcov.sh  buildAndRunUtWithValgrind.sh  buildAndRuntUt.sh  buildAndRuntUtWithAsan.sh  buildLibraryForHost.sh  buildLibraryForTarget.sh  buildLibraryMocks.sh  buildLibraryStubs.sh
src/: CMakeLists.txt  Example.cpp  dummymain.cpp
src/context/: CMakeLists.txt  Context.cpp
src/core/: CMakeLists.txt  InternalSdkLogger.cpp  Logger.cpp
src/core/definitions/: ELogSeverity.cpp  EOperationResult.cpp
src/core/detail/: LoggerFlusher.cpp  NullOutLoggerFlusher.cpp  StdOutLoggerFlusher.cpp
src/gpio/: CMakeLists.txt  Context.cpp  GpioSettingsController.cpp  GpioStateController.cpp
src/gpio/definitions/: EGpioDirection.cpp  EGpioDriveStrength.cpp  EGpioFunction.cpp  EGpioPullUp.cpp  EGpioSlewRate.cpp  EGpioSlewRateLimiting.cpp  EGpioState.cpp
src/gpio/detail/: PrinterBase.cpp
src/system/: CMakeLists.txt  Runner.cpp
stub/: CMakeLists.txt
stub/rpipicosdkalstub/: CMakeLists.txt  ExampleStub.cpp  ExampleStub.hpp
stub/rpipicosdkalstub/context/: CMakeLists.txt  ContextStub.cpp  ContextStub.hpp
stub/rpipicosdkalstub/gpio/: CMakeLists.txt  ContextStub.cpp  ContextStub.hpp  GpioSettingsControllerStub.cpp  GpioSettingsControllerStub.hpp  GpioStateControllerStub.cpp  GpioStateControllerStub.hpp
test/: CMakeLists.txt
test/picosdkmock/: CMakeLists.txt
test/picosdkmock/hardware_gpio/: GpioMock.cpp  GpioMock.hpp
test/testutil/: CMakeLists.txt  SourceLocationPrinter.cpp  SourceLocationPrinter.hpp
test/ut/: CMakeLists.txt  ExampleTests.cpp  main.cpp
test/ut/context/: CMakeLists.txt
test/ut/core/: CMakeLists.txt
test/ut/gpio/: CMakeLists.txt  GpioSettingsControllerTests.cpp  GpioStateControllerTests.cpp
test/ut/system/: CMakeLists.txt
